<resources>
    <string name="app_name">MiniHackathonTest</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_club_home">ClubHomeActivity</string>

    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="clubs">Clubs</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="help">Help/About</string>
    <string name="club_settings">Club Settings</string>

    <string name="logout">Logout</string>
    <string name="search_button">Search</string>

    <string name="are_you_sure">Are you sure?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
