<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_clubs"
            android:title="@string/clubs" />
        <item
            android:id="@+id/nav_payments"
            android:title="@string/payments" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_club_admin_settings"
            android:title="@string/club_settings"
            android:visible="false" />
    </group>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/are_you_sure" />
        </menu>
    </item>

</menu>
